--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -7,20 +7,6 @@
 	<meta keywords="Boilerplate, test">
 	<link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-	<div>
-		<header>
-			<div></div>
-			<nav></nav>
-		</header>
-		<main>
-			<div>
-			</div>
-		</main>
-		<footer>
-			<div></div>
-		</footer>  
-	</div>
-</body>
+<body></body>
 	
 </html>
