--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<title>Kurehin</title>
+	<title>Мои практики</title>
 	<meta charset="utf-8">
 	<meta descriptiom="Profile">
 	<meta keywords="Profile">
@@ -10,35 +10,15 @@
 <body>
 	<header class="header">
 		<div class="outer">
-			<h1 class="inner">Илья Карев</h1>
+			<h1 class="inner">Finished tasks</h1>
 		</div>
 	</header>
 	<main class="content">
-		<div class="ilya">
-			<img src="img/ILYA.png" alt="">
-		
-		</div >
 		<section class="box">
 			<div class="nav">
-				<a href="file:///Users/mac/Downloads/moscow_coding_school/WebDev/03_quick_prototype/index.html">Про курехина</a>
-				<a href="file:///Users/mac/Downloads/moscow_coding_school/WebDev/01_functional%20tags/index.html">Веселый малюск</a>
-				<a href="file:///Users/mac/Downloads/moscow_coding_school/WebDev/23_practice/index.html">Три колонки</a>
-				
+				<a href="./03_quick_prototype/index.html">Artists Page</a>
 			</div>
 		</section>
-		<section class="bio">
-		<h2 class="sectionText" id="Биография"></h2> 
-		<p class="main_text">Дизайнер с огромным
-		опытом работы в полиграфии,
-		и цифре.Создатель графического облика сотен современных 	брендов и мероприятий. Мастер фирстиля
-		и иллюстрации</p>	
-		</section>
-		<footer class="footer">
-			<div class="footer-container"></div>
-			<div class="image-container">
-				<img class="mcs" src="img/og-image.png" alt="">
-			</div>
-		</footer>
 	</main>
 </body>
 </html>
